# CppTexturePacker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/: altalas.h  atlas.h  cmdline.h  cpp_texture_packer.h  image_info.h  image_rect.h  packer.h  rect.h  rect_packer.h  texture_packer.h  utf8_convert.h  utils.h
pybind/: CMakeLists.txt  cpptexturepacker.cpp
src/: main.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test_main.cpp  test_packer.cpp
